fix the overflow issue on index hero element

--- a/lms/static/sass/customer-specific/_index-hero.scss
+++ b/lms/static/sass/customer-specific/_index-hero.scss
@@ -4,6 +4,7 @@
 	text-align: left;
 	color: #000;
 	border-bottom: 0.2rem solid #D7D7D7;
+	overflow: hidden;
 
 	&__content {
 		margin: 0 auto;
